2009-08-31  TOKI Yoshinori  <toki@freedom.ne.jp>

	* Rakefile: task to make document.

	* lib/gluon/application.rb, lib/gluon/builder.rb:
	initialization-arguments for mounted controller is obsolete.
	initialization-arguments destroys implicit assumption that
	controller and URL are 1 couple.

	* lib/gluon/web/404.rb, lib/gluon/web/500.rb: obsolete files for
	restructured gluon for ruby19.

	* bin/gluon_example, bin/gluon_setup, lib/gluon/setup.rb,
	run/config.rb: restructured setup utilities for ruby19.

2009-08-30  TOKI Yoshinori  <toki@freedom.ne.jp>

	* run/Rakefile, run/config.rb: make random seed for cookie based
	session.

	* Rakefile, run/Rakefile: Rakefile for runtime.

2009-08-29  TOKI Yoshinori  <toki@freedom.ne.jp>

	* Rakefile: gemspec.

	* run/bin/cgi_server, run/cgi-bin/config.ru,
	run/cgi-bin/gluon.cgi: CGI and CGI server.

2009-08-28  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/ckview.rb, lib/gluon/htmlview.rb: obsolete files for
	restructured gluon for ruby19.

	* lib/gluon/validation.rb: default of encoding-validation is root
	controller's page-encoding.

2009-08-27  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/validation.rb: ignored nil at encoding validation.
	encoding validation for list value. encoding-everything validation
	for all form values.

2009-08-25  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/web/token.rb: one time token for defense of form
	reload.

	* lib/gluon/application.rb: renew request object to refresh
	SCRIPT_NAME and PATH_INFO generated by Rack::URLMap.

2009-08-23  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/application.rb, lib/gluon/controller.rb,
	lib/gluon/rs.rb, lib/gluon/validation.rb: validation framework and
	validation utility.

	* lib/gluon/application.rb, lib/gluon/controller.rb:
	apply-first-action is obsolete and replaced by find-first-action.

	* lib/gluon/rs.rb: gluon's request attributes are stored to Rack
	request hash.

	* lib/gluon/web/error.rb: error message board component.
