@@ -1,3 +1,8 @@
+2009-09-01  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* Rakefile, run/Rakefile, run/config.rb: ENVIRONMENT of
+	development and deployment can be used.
+
 2009-08-31  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* Rakefile: task to make document.
